# investment-analysis

./: .gitignore  activate.venv.fish  analysis.ipynb  compute_state.py  cotizaciones_mep.csv  currency_conversion.py  currency_table_generation.py  custom_types.py  operations.py  pyproject.toml  read_excel.py  requirements.txt  timeseries_analysis.py
prices/: balanz_api.py  balanz_fci_price.py  iol_api.py  prices_tables_generation.py
prices/balanz_fcis/: BAHUSD_8.csv  BCACC_7.csv  BCAH_3.csv  BCAPY_4.csv  BCESTR_6.csv  BCMMUSDA_50.csv  BCMM_31.csv  BCRDolar_9.csv  BCRF_2.csv  BCSUD_10.csv  BINFRA_33.csv  BRT_1.csv  CRECIB_47.csv  ESTRA1B_41.csv  EXCALI_5.csv  GESTION_13.csv  INSTITU_11.csv  OPPOR_12.csv  PER10A_40.csv  PER1D_34.csv  PER2D_38.csv  PER3D_37.csv  PER5_35.csv  PER6_46.csv  balanz_funds_data.json
prices/dolar/: mep.csv
