[tool.poetry]
name = "balanz-analysis"
version = "0.1.0"
description = ""
authors = ["miguel <miguel.perezandrade@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
pandas = "^2.2.3"
pyxirr = "^0.10.6"
jupyter = "^1.1.1"
jupyterlab = "^4.3.4"
notebook = "^7.3.2"
jupyterlab-link-share = "^0.3.0"
jupyter-server-fileid = "^0.9.3"
jupyter-server-ydoc = "^1.1.0"
nbclassic = "^1.2.0"
plotly = "^5.24.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
